Adding dad to query string when open an app